<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" >Kytecards</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Kytecards</string>
    <string name="rotate">Rotate</string>
    <string name="title">Enter the Angle</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="browse">browse</string>
    <string name="fbupload">fbimport</string>
    <string name="postcard">postcard</string>
    <string name="companylogo">companylogo</string>
    <string name="epostcard">Send PostCard</string>
    <string name="start">Start</string>
    <string name="tip1">1.Choose or Import Photo from facebook</string>
    <string name="tip2">2. Customize Photo</string>
    <string name="tip3">3.Preview and Add Receipents</string>
    <string name="tip4">4.Buy and Send</string>
    <string name="titleimage">titleimage</string>
    <string name="sendpostcard">Send PostCard</string>
    <string name="photocard">Send PhotoCard</string>
    <string name="why">Why Kytecards?</string>
    <string name="contact">Contact Us</string>
    <string name="phone">Contact No.</string>
    <string name="phonebutton"> 1-800-495-5605</string>
    <string name="call">Call</string>
    <string name="emailid">Email</string>
    <string name="email_id"> info@kytecards.com</string>
    <string name="emailbutton">Email</string>
    <string name="location">Location</string>
    <string name="pickapic">Pick a Pic</string>
    <string name="picfromgallery">Use Exisiting Photo</string>
    <string name="picfromfacebook">Use Fb Photo</string>
    <string name="customize">Customize Pic</string>
    <string name="edit">Add Text</string>
    <string name="preview">preview</string>
    <string name="delete">delete</string>
    <string name="connectfb">Import From Facebook</string>
    <string name="addmessage">Add Greetings</string>
    <string name="addreceipent">Add Receipent</string>
    <string name="inmateaddress">Enter InMate Address</string>
    <string name="emaiaddress">Enter Email Address</string>
    <string name="paymenttitle">Select PayMent Option</string>
    <string name="paypalbutton">Buy Using PayPal</string>
    <string name="gwalletbutton">Buy Using Google Wallet</string>
    <string name="internetbutton">Buy Using Internet Banking</string>
    <string name="thankstitle">Thank You</string>
    <string name="feedback">Send Us FeedBack</string>
    <string name="another">Like To Sent Another PostCard</string>
    <string name="exit">Exit</string>
    <string name="cthank">thanks_icon</string>
    <string name="send">Send</string>
    <string name="crecipient">recipient_icon</string>
    <string name="cpicker">picker_icon</string>
    <string name="cphoto_items">photo_items</string>
    <string name="cpayment">payment_icon</string>
    <string name="cgreeting">greetings_icon</string>
    <string name="next">Next</string>
    <string name="greetings_hint">Add Greetings in here</string>
    <string name="greetings_add">Postal Add.</string>
    <string name="load_more">Load More</string>
    <string name="cgrid_selected">grid_img_selected</string>
    <string name="ccustomize">customize_screen</string>
    <string name="cmap">contact_location</string>
</resources>
