<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="3"
        android:stretchColumns="3"
        tools:ignore="UselessParent" >

        <TableRow
            android:id="@+id/phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact" />

            <TextView
                android:id="@+id/contactno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonebutton"
                android:textStyle="bold" />

            <Button
                android:id="@+id/contactbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape_small"
                android:text="@string/call"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/emailid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailid" />

            <TextView
                android:id="@+id/email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textStyle="bold" />

            <Button
                android:id="@+id/emailbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape_small"
                android:gravity="center"
                android:text="@string/emailbutton"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <ImageView
                android:id="@+id/gmap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/orangesoft" 
                android:contentDescription="@string/cmap"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>