<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
    		    android:layout_height="match_parent"
    			android:orientation="vertical" >
    
    <RelativeLayout android:gravity="center_vertical"
                    android:orientation="horizontal" 
                    android:background="#0473BC" 
                    android:paddingLeft="5.0dip" 
                    android:layout_width="fill_parent" 
                    android:layout_height="45.0dip">
                
    <TextView android:textSize="20.0sp" 
              android:textStyle="bold"
         	  android:id="@+id/title" 
         	  android:layout_width="wrap_content" 
         	  android:layout_height="wrap_content"
         	  android:layout_centerHorizontal="true"
         	  android:text="@string/addreceipent"
         	  android:textColor="@android:color/white" 
           />
    
    <ImageView android:id="@+id/titleimage"
         	   android:layout_width="wrap_content"
         	   android:layout_height="wrap_content"
         	   android:src="@drawable/add_rec"
         	   android:layout_toLeftOf="@id/title" 
         	   android:padding="2dp"
         	   android:contentDescription="@string/crecipient"
            />
    
 
   </RelativeLayout>
   
    	<Button 
               android:id="@+id/send"
        	   android:layout_width="fill_parent"
        	   android:layout_height="wrap_content"
        	   android:layout_alignParentBottom="true"
        	   android:background="@drawable/button_shape_small"
        	   android:layout_marginLeft="10dp"
        	   android:layout_marginRight="10dp"
        	   android:layout_marginBottom="5dp"
        	   android:text="@string/send"
        	   android:gravity="center"
        	   android:textSize="@dimen/start"
        	   android:drawableLeft="@drawable/send"
        	   android:paddingLeft="10dp"
        	   android:textColor="@android:color/white"
         />
    
    	<EditText 
                 android:id="@+id/inmate"
        		 android:layout_width="fill_parent"
        		 android:layout_height="wrap_content"
        	  	 android:layout_margin="10dp"
        		 android:layout_above="@id/send"
        	     android:maxLines="5"
        		 android:minLines="2"
        	     android:hint="@string/inmateaddress"
         />
    
 	   <EditText 
    		     android:id="@+id/email"
        		 android:layout_width="fill_parent"
        	     android:layout_height="wrap_content"
        		 android:layout_margin="10dp"
        		 android:layout_above="@id/inmate"
        		 android:inputType="textEmailAddress"
        		 android:hint="@string/emaiaddress"
       />

</RelativeLayout>