<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/shadowshapemargin"
                >
                
    <RelativeLayout android:gravity="center_vertical"
    	            android:orientation="horizontal" 
        	        android:background="#0473BC" 
            	    android:paddingLeft="5.0dip" 
                	android:layout_width="fill_parent" 
                	android:layout_height="45.0dip">
                
    		<TextView android:textSize="20.0sp" 
        		 	  android:textStyle="bold"
         			  android:id="@+id/title" 
         			  android:layout_width="wrap_content" 
         			  android:layout_height="wrap_content"
         			  android:layout_centerHorizontal="true"
         			  android:text="@string/addmessage" 
         			  android:textColor="@android:color/white"
             />
    
    		<ImageView android:id="@+id/titleimage"
         			   android:layout_width="wrap_content"
         			   android:layout_height="wrap_content"
         			   android:layout_toLeftOf="@id/title"
         			   android:contentDescription="@string/cgreeting"
         			   android:src="@drawable/pencil"
         			   android:padding="2dp"
             />
 
    		<Button 
           				android:id="@+id/next"
            			android:layout_width="wrap_content"
            			android:layout_height="wrap_content"
            			android:text="@string/next"
            			android:layout_marginRight="10dp"
						android:layout_alignParentRight="true"
						android:background="@drawable/button_shape_small"
						android:padding="7dp"
						android:textColor="@android:color/white"
            />
    
</RelativeLayout>

	 <LinearLayout 
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"	    
	    			android:weightSum="3"
	    >
	    		<EditText
	     				  android:id="@+id/greeting"
	     				  android:layout_width="wrap_content"
	     				  android:layout_height="332dp"
	     	    		  android:layout_gravity="center"
	     				  android:layout_margin="20dp"
	     				  android:layout_weight="2"
	     				  android:hint="@string/greetings_hint"
	     				  android:focusable="true"
	         	/>
	    
	     		<View
         				android:layout_width="1dip"
         				android:layout_height="fill_parent"
         				android:layout_marginTop="70dp"
         				android:layout_marginBottom="30dp"
         				android:background="#FF0000FF"
         		/>

	    		<TextView
	        			android:layout_width="wrap_content"
	        			android:layout_height="wrap_content"
	        			android:layout_marginTop="80dp"
	        			android:layout_weight="1"
	        			android:text="@string/greetings_add"
	        			android:layout_marginRight="5dp"
	        			android:layout_marginLeft="2dp"
	         	/>
	</LinearLayout>
	
</RelativeLayout>