<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" 
	            android:orientation="vertical"
    >
     <RelativeLayout android:gravity="center_vertical"
         			 android:id="@+id/titlebar"
         			 android:orientation="horizontal" 
          			 android:background="#0473BC" 
         			 android:paddingLeft="5.0dip" 
         			 android:layout_width="fill_parent" 
         			 android:layout_height="45.0dip">
                
         <TextView android:textSize="20.0sp" 
         		   android:textStyle="bold"
         	       android:id="@+id/title" 
         	  	   android:layout_width="wrap_content" 
                   android:layout_height="wrap_content"
                   android:layout_centerHorizontal="true"
                   android:text="@string/thankstitle"
                   android:textColor="@android:color/white" 
           />
    
    	<ImageView android:id="@+id/titleimage"
        		   android:layout_width="wrap_content"
         		   android:layout_height="wrap_content"
         		   android:layout_toLeftOf="@id/title" 
         		   android:contentDescription="@string/cthank"
         		   android:padding="2dp"
         		   android:src="@drawable/fb_like"
         />
   
   </RelativeLayout>
   
     <Button 
             android:id="@+id/feedbackbutton"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="90dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_below="@id/titlebar"
             android:background="@drawable/button_shape_small"
             android:text="@string/feedback"
             android:textSize="@dimen/smallstart"
             android:padding="10dp"
             android:textColor="@android:color/white"
         />
     
     <Button 
         	 android:id="@+id/againbutton"
         	 android:layout_width="fill_parent"
		 	 android:layout_height="wrap_content"
		 	 android:layout_marginTop="45dp"
		  	 android:layout_marginLeft="20dp"
		  	 android:layout_marginRight="20dp"
		 	 android:layout_below="@id/feedbackbutton"
		 	 android:background="@drawable/button_shape_small"
		 	 android:text="@string/another"
		 	 android:textSize="@dimen/smallstart"
		 	 android:padding="10dp"
		 	 android:textColor="@android:color/white"        
         />
     
     <Button 
        	 android:id="@+id/exitbutton"
             android:layout_width="fill_parent"
         	 android:layout_height="wrap_content"
         	 android:layout_marginTop="45dp"
         	 android:layout_marginLeft="20dp"
         	 android:layout_marginRight="20dp"
         	 android:layout_below="@id/againbutton"
         	 android:background="@drawable/button_shape_small"
         	 android:textSize="@dimen/smallstart"
         	 android:text="@string/exit"
         	 android:padding="10dp"
         	 android:textColor="@android:color/white"
         />

</RelativeLayout>