<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" 
       			android:layout_width="fill_parent"
       		    android:layout_height="fill_parent"
  				xmlns:android="http://schemas.android.com/apk/res/android">
    
    <RelativeLayout android:gravity="center_vertical" 
                    android:orientation="horizontal" 
                    android:id="@+id/customtitle" 
                    android:background="#0473BC" 
                    android:paddingLeft="5.0dip" 
                    android:layout_width="fill_parent" 
                    android:layout_height="45.0dip">
                    
        <TextView android:textSize="20.0sp" 
              android:textStyle="bold"
              android:id="@+id/title"
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content" 
              android:text="@string/customize"
              android:layout_centerHorizontal="true" 
              android:textColor="@android:color/white" 
               />
        
        <ImageView android:id="@+id/titleimage"
             android:layout_width="wrap_content" 
             android:layout_height="wrap_content" 
             android:layout_toLeftOf="@id/title"
             android:src="@drawable/brush"
             android:padding="2dp"
             android:contentDescription="@string/ccustomize" />
        
        <Button 
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginRight="10dp"
			android:layout_alignParentRight="true"
			android:background="@drawable/button_shape_small"
			android:padding="7dp"
			android:textColor="@android:color/white"
            />
        
    </RelativeLayout>
    
    <FrameLayout android:id="@+id/editpiclayout" 
    		     android:layout_width="fill_parent" 
        		 android:layout_height="fill_parent"
         		 android:layout_below="@id/customtitle"
         		 android:background="@drawable/shadowshape"
     />
    
</RelativeLayout>